add:  즐겨찾기 및 전체 폴더/약속 목록 불러오기
